MyDemoOrg/force-app/main/default/objects/signature__Signature__c/signature__Signature__c.object-meta.xml
<CustomObject>
    <description>Verifications and Signature Documents</description>
    <label>ß Signature</label>
    <nameField>
        <displayFormat>S{000000}</displayFormat>
        <label>S#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>