MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__AddtoCampaignID__c.field-meta.xml
<CustomField>
    <fullName>signature__AddtoCampaignID__c</fullName>
    <label>Add to Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>