MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__AgreedtoeSignatureUse__c.field-meta.xml
<CustomField>
    <fullName>signature__AgreedtoeSignatureUse__c</fullName>
    <label>Agreed to eSignature Use</label>
    <type>DateTime</type>
</CustomField>