MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__AttachmentID__c.field-meta.xml
<CustomField>
    <fullName>signature__AttachmentID__c</fullName>
    <description>The ID of the attachment to be used rather than generating a new PDF</description>
    <inlineHelpText>The ID of the attachment to be used rather than generating a new PDF</inlineHelpText>
    <label>Attachment ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>