MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__AttachPDF__c.field-meta.xml
<CustomField>
    <fullName>signature__AttachPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach PDF?</label>
    <type>Checkbox</type>
</CustomField>