MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__AttachPDFtoParent__c.field-meta.xml
<CustomField>
    <fullName>signature__AttachPDFtoParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach PDF to Parent?</label>
    <type>Checkbox</type>
</CustomField>