MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__City__c.field-meta.xml
<CustomField>
    <fullName>signature__City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>