MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>signature__Cloned_From__c</fullName>
    <label>Cloned From</label>
    <length>18</length>
    <type>Text</type>
</CustomField>