MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Company__c.field-meta.xml
<CustomField>
    <fullName>signature__Company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>