MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Date_2__c.field-meta.xml
<CustomField>
    <fullName>signature__Date_2__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>