MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Date__c.field-meta.xml
<CustomField>
    <fullName>signature__Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>