MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__DeleteImageAfterPDFGenerated__c.field-meta.xml
<CustomField>
    <fullName>signature__DeleteImageAfterPDFGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Image After PDF Generated</label>
    <type>Checkbox</type>
</CustomField>