MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__DigitalFingerprint__c.field-meta.xml
<CustomField>
    <fullName>signature__DigitalFingerprint__c</fullName>
    <label>Digital Fingerprint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>