MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Disable_Processing__c.field-meta.xml
<CustomField>
    <fullName>signature__Disable_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For multi-step signature processes.  If this is checked, the signature will not be processed.</description>
    <inlineHelpText>For multi-step signature processes.  If this is checked, the signature will not be processed.</inlineHelpText>
    <label>Disable  Processing</label>
    <type>Checkbox</type>
</CustomField>