MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__EmailPDF__c.field-meta.xml
<CustomField>
    <fullName>signature__EmailPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email PDF?</label>
    <type>Checkbox</type>
</CustomField>