MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>signature__EmailTemplate__c</fullName>
    <label>Email Template (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>