MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__EmailTemplateCompletion__c.field-meta.xml
<CustomField>
    <fullName>signature__EmailTemplateCompletion__c</fullName>
    <label>Email Template (Completion)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>