MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__EmailTemplateRequest__c.field-meta.xml
<CustomField>
    <fullName>signature__EmailTemplateRequest__c</fullName>
    <label>Email Template (Request)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>