MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__EmbedPDF__c.field-meta.xml
<CustomField>
    <fullName>signature__EmbedPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embed PDF?</label>
    <type>Checkbox</type>
</CustomField>