MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Experience_ID__c.field-meta.xml
<CustomField>
    <fullName>signature__Experience_ID__c</fullName>
    <label>Experience ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>