MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>signature__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>