MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__ExternalID__c.field-meta.xml
<CustomField>
    <fullName>signature__ExternalID__c</fullName>
    <label>ExternalID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>