MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__FieldList__c.field-meta.xml
<CustomField>
    <fullName>signature__FieldList__c</fullName>
    <label>Field List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>