MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__FieldSet__c.field-meta.xml
<CustomField>
    <fullName>signature__FieldSet__c</fullName>
    <description>List of fields in the field set</description>
    <inlineHelpText>List of fields in the field set</inlineHelpText>
    <label>FieldSet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>