MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>signature__Full_Name__c</fullName>
    <formula>signature__Name__c &amp; &quot; &quot; &amp;  signature__Name_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>