MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Generate_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>signature__Generate_QR_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate QR Code</label>
    <type>Checkbox</type>
</CustomField>