MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__IPWhenSigned__c.field-meta.xml
<CustomField>
    <fullName>signature__IPWhenSigned__c</fullName>
    <label>IP When Signed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>