MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Language__c.field-meta.xml
<CustomField>
    <fullName>signature__Language__c</fullName>
    <label>Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>