MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Legal_Text__c.field-meta.xml
<CustomField>
    <fullName>signature__Legal_Text__c</fullName>
    <label>Legal Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>