MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__MultiContactList__c.field-meta.xml
<CustomField>
    <fullName>signature__MultiContactList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Contact List</label>
    <referenceTo>signature__List__c</referenceTo>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>