MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__MultiDates__c.field-meta.xml
<CustomField>
    <fullName>signature__MultiDates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Dates</label>
    <type>Checkbox</type>
</CustomField>