MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__MultipleSteps__c.field-meta.xml
<CustomField>
    <fullName>signature__MultipleSteps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Steps</label>
    <type>Checkbox</type>
</CustomField>