MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Name_2__c.field-meta.xml
<CustomField>
    <fullName>signature__Name_2__c</fullName>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>