MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Name__c.field-meta.xml
<CustomField>
    <fullName>signature__Name__c</fullName>
    <label>First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>