MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__NotApproved__c.field-meta.xml
<CustomField>
    <fullName>signature__NotApproved__c</fullName>
    <description>Timestamp when the user rejected the signature request</description>
    <inlineHelpText>Timestamp when the user rejected the signature request</inlineHelpText>
    <label>Not Approved</label>
    <type>DateTime</type>
</CustomField>