MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>signature__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>