MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__OtherEmails__c.field-meta.xml
<CustomField>
    <fullName>signature__OtherEmails__c</fullName>
    <label>Other Email(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>