MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__ParentLookupField__c.field-meta.xml
<CustomField>
    <fullName>signature__ParentLookupField__c</fullName>
    <label>Parent Lookup Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>