MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__PartnerID__c.field-meta.xml
<CustomField>
    <fullName>signature__PartnerID__c</fullName>
    <label>PartnerID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>