MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__PDFAttached__c.field-meta.xml
<CustomField>
    <fullName>signature__PDFAttached__c</fullName>
    <label>PDF Attached</label>
    <type>DateTime</type>
</CustomField>