MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__PDFAttachedtoParent__c.field-meta.xml
<CustomField>
    <fullName>signature__PDFAttachedtoParent__c</fullName>
    <label>PDF Attached to Parent</label>
    <type>DateTime</type>
</CustomField>