MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__PDFEmailed__c.field-meta.xml
<CustomField>
    <fullName>signature__PDFEmailed__c</fullName>
    <label>PDF Emailed</label>
    <type>DateTime</type>
</CustomField>