MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__PDFTemplate__c.field-meta.xml
<CustomField>
    <fullName>signature__PDFTemplate__c</fullName>
    <label>PDF Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>