MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Phone__c.field-meta.xml
<CustomField>
    <fullName>signature__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>