MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__PhoneLineType__c.field-meta.xml
<CustomField>
    <fullName>signature__PhoneLineType__c</fullName>
    <inlineHelpText>mobile, landline, etc.</inlineHelpText>
    <label>Phone Line Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>