MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Process_Immediately__c.field-meta.xml
<CustomField>
    <fullName>signature__Process_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For multi-step signature processes. If this is checked, the multi process is not ready, or has already run.  Unchecking might send the final PDF again.</description>
    <inlineHelpText>For multi-step signature processes. If this is checked, the multi process is not ready, or has already run.  Unchecking might send the final PDF again.</inlineHelpText>
    <label>Process Immediately</label>
    <type>Checkbox</type>
</CustomField>