MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__ProcessingLog__c.field-meta.xml
<CustomField>
    <fullName>signature__ProcessingLog__c</fullName>
    <label>Processing Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>