MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__RequestedForm__c.field-meta.xml
<CustomField>
    <fullName>signature__RequestedForm__c</fullName>
    <label>Requested Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>