MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__RequestedPDFName__c.field-meta.xml
<CustomField>
    <fullName>signature__RequestedPDFName__c</fullName>
    <label>Requested PDF Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>