MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Sign_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>signature__Sign_QR_Code__c</fullName>
    <label>Sign QR Code</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>