MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Signature__c.field-meta.xml
<CustomField>
    <fullName>signature__Signature__c</fullName>
    <label>Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>