MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__SignatureIDs__c.field-meta.xml
<CustomField>
    <fullName>signature__SignatureIDs__c</fullName>
    <label>Signature IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>