MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__SignaturePassword__c.field-meta.xml
<CustomField>
    <fullName>signature__SignaturePassword__c</fullName>
    <label>Signature Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>