MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__StartDate__c.field-meta.xml
<CustomField>
    <fullName>signature__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>