MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__State__c.field-meta.xml
<CustomField>
    <fullName>signature__State__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>