MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__StaticAttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>signature__StaticAttachmentIds__c</fullName>
    <label>StaticAttachmentIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>