MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Step_Emailed__c.field-meta.xml
<CustomField>
    <fullName>signature__Step_Emailed__c</fullName>
    <label>Step Emailed</label>
    <type>DateTime</type>
</CustomField>