MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Templates__c.field-meta.xml
<CustomField>
    <fullName>signature__Templates__c</fullName>
    <label>Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>