MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Title__c.field-meta.xml
<CustomField>
    <fullName>signature__Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>