MyDemoOrg/force-app/main/default/objects/signature__Signature__c/fields/signature__Verify__c.field-meta.xml
<CustomField>
    <fullName>signature__Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify</label>
    <type>Checkbox</type>
</CustomField>