MyDemoOrg/force-app/main/default/objects/signature__Signature__c/listViews/signature__All.listView-meta.xml
<ListView>
    <fullName>signature__All</fullName>
    <columns>NAME</columns>
    <columns>signature__Full_Name__c</columns>
    <columns>signature__City__c</columns>
    <columns>signature__State__c</columns>
    <columns>signature__Date_2__c</columns>
    <columns>signature__Date__c</columns>
    <columns>signature__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>