MyDemoOrg/force-app/main/default/objects/signature__Signature__c/listViews/signature__Requests.listView-meta.xml
<ListView>
    <fullName>signature__Requests</fullName>
    <columns>NAME</columns>
    <columns>signature__Contact__c</columns>
    <columns>signature__Date__c</columns>
    <columns>signature__Clicked__c</columns>
    <columns>signature__Signed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>signature__Clicked__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Requests</label>
</ListView>